--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+[tool.poetry]
+name = "advanced-scraper"
+version = "1.0.0"
+description = "An advanced web scraper with AI capabilities and real-time updates"
+
 [build-system]
 requires = ["setuptools>=64.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
