had to add author

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
-[tool.poetry]
+[
+tool.poetry
+]
 name = "advanced-scraper"
 version = "1.0.0"
 description = "An advanced web scraper with AI capabilities and real-time updates"
+authors = ["Your Name <your.email@example.com>"]
 
 [build-system]
 requires = ["setuptools>=64.0.0", "wheel"]
