--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,7 @@
 name = "advanced-scraper"
 version = "1.0.0"
 description = "An advanced web scraper with AI capabilities and real-time updates"
-authors = [
-  { name = "Your Name", email = "your.email@example.com" }
-]
+authors = ["Your Name <your.email@example.com>"]
 
 [build-system]
 requires = ["setuptools>=64.0.0", "wheel"]
