--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,7 @@ dev = [
 ]
 
 [project.scripts]
-advanced-scraper = "scrape_updated.py"
+advanced-scraper = "./scrape_updated.py"
 
 [tool.setuptools]
 package-dir = {"" = "."}
